--- a/src/components/mapModal/MapModal.module.scss
+++ b/src/components/mapModal/MapModal.module.scss
@@ -1,7 +1,34 @@
-.mapContainer {
-  display: none;
+.modalBackdrop {
+  position: fixed;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(40, 19, 29, 0.7);
+  z-index: 1200;
+  transition: background-color 0.9s ease-out;
+  pointer-events: none;
 
   &.showContainer {
-    display: block;
+    opacity: 1;
+    pointer-events: auto;
   }
+}
+
+.mapContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 840px;
+  height: fit-content;
+  padding: 20px;
+  border-radius: 5px;
+  background: #f7f2f4;
+  box-shadow: 0px 4px 8px 0px rgba(69, 67, 67, 0.15);
+  z-index: 150;
+  transform: translate(-50%, -50%);
 }
