--- a/src/pages/home/HomePage.module.scss
+++ b/src/pages/home/HomePage.module.scss
@@ -1,4 +1,18 @@
 .pageContainer {
   display: flex;
   position: relative;
+
+  @media (min-width: 524px) {
+    margin: 0 auto;
+    padding: 10px;
+  }
+  @media screen and (min-width: 768px) {
+    padding: 20px 32px;
+    width: 100%;
+    max-width: 1144px;
+  }
+  @media (min-width: 1280px) {
+    max-width: 1280px;
+    padding: 30px 40px;
+  }
 }
