--- a/src/components/apartmentList/ApartmentList.module.scss
+++ b/src/components/apartmentList/ApartmentList.module.scss
@@ -1,7 +1,16 @@
+.container {
+  padding: 10px;
+}
+
+.title {
+  margin-bottom: 20px;
+  font-weight: 500;
+  font-size: 18px;
+}
+
 .apartmentList {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  padding: 20px;
   overflow-y: scroll;
 }
