--- a/src/pages/home/HomePage.module.scss
+++ b/src/pages/home/HomePage.module.scss
@@ -7,13 +7,12 @@
     padding: 10px;
   }
   @media screen and (min-width: 768px) {
-    padding: 20px 32px;
+    padding: 20px;
     width: 100%;
-    max-width: 1144px;
+    max-width: 1280px;
   }
   @media (min-width: 1280px) {
     max-width: 1280px;
-    padding: 30px 40px;
   }
 }
 
