--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -30,8 +30,11 @@
   }
 }
 
+.logo {
+  margin-right: 8px;
+}
+
 .homeNav {
-  margin-left: 8px;
   font-weight: 700;
   font-size: 20px;
   color: #4242c9;
