--- a/src/pages/home/HomePage.module.scss
+++ b/src/pages/home/HomePage.module.scss
@@ -1,12 +1,16 @@
 .pageContainer {
   display: flex;
+  flex-direction: column;
   position: relative;
+  align-items: center;
 
   @media (min-width: 524px) {
     margin: 0 auto;
     padding: 10px;
   }
   @media screen and (min-width: 768px) {
+    flex-direction: row;
+    align-items: normal;
     padding: 20px;
     width: 100%;
     max-width: 1280px;
